--- a/pom.xml
+++ b/pom.xml
@@ -133,7 +133,11 @@
 			<artifactId>gson</artifactId>
 			<version>2.8.5</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-taglibs</artifactId>
+			<version>5.2.4.RELEASE</version>
+		</dependency>
 
 
 	</dependencies>
