--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -5,7 +5,9 @@ Size.registerUser.password=Try one with at least 7 characters.
 Diff.registerUser.passwordConfirm=These passwords don't match.
 Size.registerUser.mobileNumber=Please Enter a Valid 10 Digit Mobile Number
 Duplicate.registerUser.mobileNumber=Someone already has that Mobile Number.
+Select.registerUser.roleId=Please Select the Role that needs to be given to the User
 
 
 Size.rolesForm.roleName=Role Name must be between 4 and 32 characters.
 Size.rolesForm.roleDescription=Description of the Role must be between 4 and 40 characters.
+Duplicate.rolesForm.roleName=Role Already Exists.
