-- Data Table Integrated -- ID Card Generated Via Web -- Search List ID Card Working -- Design Changes -- Base Theme Changed

--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -11,3 +11,7 @@ Select.registerUser.roleId=Please Select the Role that needs to be given to the 
 Size.rolesForm.roleName=Role Name must be between 4 and 32 characters.
 Size.rolesForm.roleDescription=Description of the Role must be between 4 and 40 characters.
 Duplicate.rolesForm.roleName=Role Already Exists.
+
+Size.showIdCardList.date=Please Select Date
+Select.showIdCardList.district_id=Please Select District 
+Select.showIdCardList.barrier_id=Please Select Barrier 
