-- Hibernate Implemented -- One To One Mapping Done -- Pop Up View Details Completed -- Search Facility Given -- Program Working Up and Fine

--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -14,4 +14,9 @@ Duplicate.rolesForm.roleName=Role Already Exists.
 
 Size.showIdCardList.date=Please Select Date
 Select.showIdCardList.district_id=Please Select District 
-Select.showIdCardList.barrier_id=Please Select Barrier 
+Select.showIdCardList.barrier_id=Please Select Barrier
+
+Size.searchId.vehicleNumber= Please Enter valid Vehicle Number
+Size.searchId.mobileNumber= Please enter Mobile Number
+Length.searchId.mobileNumber= Please Enter a valid 10 digit Mobile number
+
