-- API Exception Handling -- Reports Integrated -- Apache POM not yet Integrated -- Reports PnC Added -- Exception Handling Added

--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -20,3 +20,6 @@ Size.searchId.vehicleNumber= Please Enter valid Vehicle Number
 Size.searchId.mobileNumber= Please enter Mobile Number
 Length.searchId.mobileNumber= Please Enter a valid 10 digit Mobile number
 
+Size.reportsForm.district = "Please Select District"
+Size.reportsForm.barrier = "Please Select Barrier"
+
