--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,17 @@
 			<version>5.2.4.RELEASE</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>4.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>4.0.1</version>
+		</dependency>
+
 
 	</dependencies>
 
