--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -20,6 +20,8 @@ Size.searchId.vehicleNumber= Please Enter valid Vehicle Number
 Size.searchId.mobileNumber= Please enter Mobile Number
 Length.searchId.mobileNumber= Please Enter a valid 10 digit Mobile number
 
-Size.reportsForm.district = "Please Select District"
-Size.reportsForm.barrier = "Please Select Barrier"
+Size.reportsForm.district = Please Select District
+Size.reportsForm.barrier = Please Select Barrier
+
+Select.vehicleService.serviceType = Please Select type of Service
 
