-- Saarthi Service Integrated

--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -24,4 +24,5 @@ Size.reportsForm.district = Please Select District
 Size.reportsForm.barrier = Please Select Barrier
 
 Select.vehicleService.serviceType = Please Select type of Service
+Select.sarthi.dlNumber = Please enter Driving Licence
 
